 *   - + iMDB log country,language and screens fields
 *   - ~ Crash when casting results of certain directives
 *   - ~ Filesystem traversal: int/float casted string not referencing data
 *   - + LOM: ~ (set) operator
 *   - % Removed options which were not POSIX-compilant
 *   - ~ Several bugfixes and improvements
 *   2.6.3:
 *   - ~ Precheck compatibility with current versions
 *
 * v2.5:
 *
 *   - % Changed how field is passed to string matching parameters
 *   - ~ '?d' was modifying data storage area
 *   - % Mounting /proc no longer required (read NEWS)
 *   2.5.2:
 *   - ~ Fixed broken legacy macro argument passing (-arg1, -arg2, ..)
 *   - % Re-open log after fork (before exec), capture stdout (precheck)
 *   2.5.3:
 *   - ~ ?q: parsing broken
 *   - ~ dirlog rebuild target path string empty in certain cases
 *   2.5.5:
 *   - ! Avoid processing unecessary filters
 *   2.5.6:
 *   - ~ -[post|pre]print[f] overlapping
 *   2.5.7:
 *   - + made altlog dumpable via -q 
 *   2.5.8:
 *   - ~ --dupefile option was ignored when calling macros
 *   2.5.9:
 *   - ~ potential buffer overflow (dirlog rebuild) 
 *   2.5.10:
 *   - ~ segfault when string matching against non-existant key ('?x' directive)
 *   2.5.11:
 *   - + base64 encoding/decoding (?B/?D extended directives, respectively)
 *   - + ?s extended directive (see MANUAL)
 *   2.5.12:
 *   - ~ Fix BSD-incompatible include
 *   - + Implemented --stdlvl <0-32>, added more options to --stdlog
 *   - % Made -prune: <expr> operator work when rebuilding dirlog (-r)
 *
 * v2.4:
 *
 *   - + 'user' and 'group' fields, see under FILESYSTEM in DATA_STRUCTURES
 *   - + 'm:siterootn' field
 *   - % Got rid of "(MISSING)" messages ('user' and 'group') fields, instead it returns blank when info can't be obtained
 *   - ~ Segfaulted when looking up 'user' or 'group' fields, in certain cases
 *   - ~ Called 'md_init' twice when referencing 'user' or 'group' fields (FILESYSTEM)