@@ -69,12 +69,13 @@
 #define F_GH_SPEC_SQ02                  (a64 << 57)
 #define F_GH_HAS_LEXEC_WPID_CB          (a64 << 58)
 #define F_GH_PRINT0  		        (a64 << 59)
-#define F_GH_ISIMDB_O                   (a64 << 60)
+#define F_GH_OMFP_SKIP_ONE              (a64 << 60)
+#define F_GH_ISIMDB_O			(a64 << 61)
 
 #define F_GH_STATUS_FLAGS               (F_GH_TFD_PROCED)
 
 /* these bits determine log type */
-#define F_GH_ISTYPE                     (F_GH_ISFSX|F_GH_ISGCONF|F_GH_ISSCONF|F_GH_ISGENERIC4|F_GH_ISGENERIC3|F_GH_ISGENERIC2|F_GH_ISGENERIC1|F_GH_ISNUKELOG|F_GH_ISDIRLOG|F_GH_ISDUPEFILE|F_GH_ISLASTONLOG|F_GH_ISONELINERS|F_GH_ISONLINE|F_GH_ISIMDB|F_GH_ISGAME|F_GH_ISFSX|F_GH_ISTVRAGE|F_GH_IS_ALTLOG)
+#define F_GH_ISTYPE                     (F_GH_ISFSX|F_GH_ISGCONF|F_GH_ISSCONF|F_GH_ISGENERIC4|F_GH_ISGENERIC3|F_GH_ISGENERIC2|F_GH_ISGENERIC1|F_GH_ISNUKELOG|F_GH_ISDIRLOG|F_GH_ISDUPEFILE|F_GH_ISLASTONLOG|F_GH_ISONELINERS|F_GH_ISONLINE|F_GH_ISIMDB|F_GH_ISIMDB_O|F_GH_ISGAME|F_GH_ISFSX|F_GH_ISTVRAGE|F_GH_IS_ALTLOG)
 
 #define F_GH_ISSHM                      (F_GH_SHM|F_GH_ONSHM)
 #define F_GH_ISMP                       (F_GH_HASMATCHES|F_GH_HASMAXRES|F_GH_HASMAXHIT)
@@ -105,6 +106,8 @@ typedef struct ___pipe_object
   int pfd_in[2], pfd_out[2];
 } _pipe_obj, *__pipe_obj;
 
+#include "hasht.h"
+
 typedef struct g_handle
 {
   FILE *fh;
@@ -127,6 +130,8 @@ typedef struct g_handle
   mda pre_print_mech;
   pmda act_mech;
   void *data;
+  hashtable_t *ht_ref;
+  char *ht_field;
   char s_buffer[PATH_MAX];
   char mv1_b[MAX_VAR_LEN];
   char file[PATH_MAX], mode[32];
