@@ -50,6 +50,7 @@ g_print_do_filter (__g_handle hdl, void *s_exec)
   return r;
 }
 
+
 int
 g_print_stats (char *file, uint32_t flags, size_t block_sz)
 {
@@ -157,6 +158,11 @@ g_print_stats (char *file, uint32_t flags, size_t block_sz)
 
   g_act_1.buffer.offset = 0;
 
+  if (gfl & F_OPT_VERBOSE3)
+    {
+      print_str ("NOTICE: %s: generating hash table..\n", g_act_1.file);
+    }
+
   if (!sigsetjmp(g_sigjmp.env, 1))
     {
       while ((ptr = g_read (buffer, &g_act_1, g_act_1.block_sz)))
@@ -174,10 +180,9 @@ g_print_stats (char *file, uint32_t flags, size_t block_sz)
 			     g_act_1.file, r);
 		  break;
 		}
+
 	      continue;
 	    }
-
-	  omfp_timeout;
 
 	  c++;
 	  g_act_1.g_proc4 ((void*) &g_act_1, ptr, NULL);
